Appearance(menus): Make menus show a marker emoji.